Set theme jekyll-theme-hacker

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-hacker
 
 title: Ludorg's homepage
 description: Bookmark this to keep an eye on my project updates!
