--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-hacker
-
-title: Ludorg's homepage
+title: dev.ludorg.net
 description: Bookmark this to keep an eye on my project updates!
