--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
 title: dev.ludorg.net
-description: Bookmark this to keep an eye on my project updates!
+description: Various static pages hosted on https://pages.github.com/
