--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
 title: dev.ludorg.net
-description: Various static pages hosted on https://pages.github.com/
+description: Various static pages hosted on (GitHub Pages)[https://pages.github.com/]
