--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-hacker
+theme: jekyll-theme-slate
 title: dev.ludorg.net
 description: Various static pages freely hosted on GitHub Pages
