--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: dev.ludorg.net
+title: ludorg/dev
 description: Various static pages on my 'code as hobby' activities
